# cliodynamics

./: crisiswatch.db  crisiswatch_cli.py  pyproject.toml
cliodynamics/: pyproject.toml
cliodynamics/system/: base.py  sdt.py
crisiswatch_agent/: __init__.py  agent.py  cli.py  pyproject.toml
crisiswatch_agent/rag/: embeddings.py
crisiswatch_agent/test/: test_tools.py
crisiswatch_agent/tools/: fetch.py  search.py  summarize.py
notebooks/: simulate_independent_trajectories.ipynb
